--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/tobiasgrott/frontend-techs/issues"
   },
-  "homepage": "https://github.com/tobiasgrott/frontend-techs#readme"
+  "homepage": "https://github.com/tobiasgrott/frontend-techs#readme",
+  "devDependencies": {
+    "tsc": "^1.20150623.0",
+    "typescript": "^4.1.3"
+  }
 }
