--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "frontend-techs-ui",
   "version": "1.0.0",
   "description": "Comparing different frontend techs",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && npm run build:cp-public",
+    "build:cp-public": "cp ./public/** ./dist",
+    "type": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
