--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Comparing different frontend techs",
   "main": "src/index.ts",
   "scripts": {
-    "build": "run-s build:clean type webpack",
+    "build": "run-s build:clean lint type webpack",
+    "lint": "eslint ./src",
     "build:clean": "rumraf ./dist",
     "type": "tsc --noEmit",
     "webpack": "webpack",
@@ -24,8 +25,12 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.19.0",
     "html-webpack-plugin": "^5.0.0",
+    "prettier": "^2.2.1",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.3",
     "webpack": "^5.21.1",
