--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Comparing different frontend techs",
   "main": "src/index.ts",
   "scripts": {
-    "build": "run-s build:clean lint type webpack",
+    "build": "run-s lint type test build:clean webpack",
+    "jest": "jest --watch",
+    "test": "run-s test:unit",
+    "test:unit": "jest",
     "lint": "eslint ./src",
     "build:clean": "rumraf ./dist",
     "type": "tsc --noEmit",
@@ -25,11 +28,16 @@
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@types/faker": "^5.1.6",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "eslint": "^7.19.0",
+    "faker": "^5.3.1",
     "html-webpack-plugin": "^5.0.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "tsc": "^1.20150623.0",
     "typescript": "^4.1.3",
